--- a/templates/about.html
+++ b/templates/about.html
@@ -3,19 +3,19 @@
 {% block title %} About Me | Edwin {% endblock %}
 
 {% block body %}
-    <div class="py-48 flex justify-center items-center">
-        <div class="max-w-xl">
-            <div class="border border-neutral-700 p-3 rounded-md block antialiased">
+    <div class="">
+        <div class="">
+            <div class="">
                 Hi, my name is Edwin and I'm a computer science student at the University of Liverpool.
                 My focus right now is to develop my skills in my interest such as programming and drawing
                 (with a bit of 3d modelling in Blender). I dont have a more specialized path to follow in
                 Computer Science but I plan to learn a bit of everything first :).
             </div>
-            <div class="border border-neutral-700 p-3 rounded-md block antialiased my-8">
+            <div class="">
                 Favorite Games at the moment:
                 Warframe,Bloodborne,Elden Ring
             </div>
-            <div class="border border-neutral-700 p-3 rounded-md block antialiased my-8">
+            <div class="">
                 Favorite Books ,Manga and Light Novels that I can remember:
                 Shadow Slave, Magi ,Tokyo Ghoul,Sword of Kaigen
             </div>
