--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,50 +4,50 @@
 
 {% block body %}
 
-<div class="py-48 flex justify-center items-center">
-    <div class="max-w-2xl">
-        <div class="w-full grid grid-cols-2 grid-rows-2 gap-y-4 gap-x-2">
-            <div class="bg-[#24ecd2] border border-neutral-700 p-3 rounded-md block antialiased">
-                <div class="flex inline-flex w-full">
+<div class="">
+    <div class="">
+        <div class=" ">
+            <div class=" ">
+                <div class=" ">
                     <h1>Manga App (In Progress)</h1>
-                    <a class="ml-auto" target="_blank" href="https://github.com/hhgsx/manga-android" ><img class="w-6 h-6 " src="static/icons8-github.svg"></a>
+                    <a class=" " target="_blank" href="https://github.com/hhgsx/manga-android" ><img class=" " src="static/icons8-github.svg"></a>
                 </div>
-                <div class="py-2">
-                    <h3 class="text-black-400 text-sm">An Android app that scrapes internet websites and displays it comfortably to your phone</h3>
+                <div class=" ">
+                    <h3 class=" ">An Android app that scrapes internet websites and displays it comfortably to your phone</h3>
 
                 </div>
                 <div>
-                    <span class="text-xs text-soft border border-neutral-800 px-2 py-1 rounded-md code tracking-tight">Kotlin</span>
-                    <span class="text-xs text-soft border border-neutral-800 px-2 py-1 rounded-md code tracking-tight">Android</span>
+                    <span class=" ">Kotlin</span>
+                    <span class=" ">Android</span>
                     <span></span>
                 </div>
             </div>
-            <div class="bg-red-600 border border-neutral-700 p-3 rounded-md block antialiased">
-                <div class="flex inline-flex w-full">
+            <div class=" ">
+                <div class=" ">
                     <h1>8-bit Emulator (In Progress) </h1>
-                    <a class="ml-auto" target="_blank" href="https://github.com/hhgsx/8bit-emulator" ><img class="w-6 h-6 " src="static/icons8-github.svg"></a>
+                    <a class=" " target="_blank" href="https://github.com/hhgsx/8bit-emulator" ><img class="  " src="static/icons8-github.svg"></a>
                 </div>
                 <div>
-                    <h3 class="text-black-400 text-sm">An 8-bit emulator , started with this one because i intend to go onto more difficult systems</h3>
+                    <h3 class=" ">An 8-bit emulator , started with this one because i intend to go onto more difficult systems</h3>
                 </div>
 
                 <div>
-                    <span class="text-xs text-soft border border-neutral-800 px-2 py-1 rounded-md code tracking-tight">C</span>
-                    <span class="text-xs text-soft border border-neutral-800 px-2 py-1 rounded-md code tracking-tight">Emulation</span>
-                    <span class="text-xs text-soft border border-neutral-800 px-2 py-1 rounded-md code tracking-tight">Low Level Programming</span>
+                    <span class=" ">C</span>
+                    <span class=" ">Emulation</span>
+                    <span class=" ">Low Level Programming</span>
                 </div>
             </div>
-            <div class="bg-green-300 border border-neutral-700 p-3 rounded-md blcok antialiased">
-                <div class="flex inline-flex w-full">
+            <div class=" ">
+                <div class=" ">
                     <h1>Manga Scrapper CLI</h1>
-                    <a class="ml-auto" target="_blank" href="https://github.com/hhgsx/manga-sp" ><img class="w-6 h-6 " src="static/icons8-github.svg"></a>
+                    <a class= " " target="_blank" href="https://github.com/hhgsx/manga-sp" ><img class=" " src="static/icons8-github.svg"></a>
                 </div>
                 <div>
-                    <h3 class="text-black-400 text-sm">A CLI app that downloads entire manga volumes</h3>
+                    <h3 class=" ">A CLI app that downloads entire manga volumes</h3>
                 </div>
                 <div>
-                    <span class="text-xs text-soft border border-neutral-800 px-2 py-1 rounded-md code tracking-tight">Kotlin</span>
-                    <span class="text-xs text-soft border border-neutral-800 px-2 py-1 rounded-md code tracking-tight">Android</span>
+                    <span class=" ">Kotlin</span>
+                    <span class=" ">Android</span>
                 </div>
             </div>
         </div>
