--- a/templates/projects.html
+++ b/templates/projects.html
@@ -9,11 +9,11 @@
         <div class=" ">
             <div class=" ">
                 <div class=" ">
-                    <h1>Manga App (In Progress)</h1>
+                    <h1>Yomu</h1>
                     <a class=" " target="_blank" href="https://github.com/hhgsx/manga-android" ><img class=" " src="static/icons8-github.svg"></a>
                 </div>
                 <div class=" ">
-                    <h3 class=" ">An Android app that scrapes internet websites and displays it comfortably to your phone</h3>
+                    <h3 class=" ">Kotlin Multiplatform app to read manga</h3>
 
                 </div>
                 <div>
@@ -39,11 +39,11 @@
             </div>
             <div class=" ">
                 <div class=" ">
-                    <h1>Manga Scrapper CLI</h1>
+                    <h1>manga-sp</h1>
                     <a class= " " target="_blank" href="https://github.com/hhgsx/manga-sp" ><img class=" " src="static/icons8-github.svg"></a>
                 </div>
                 <div>
-                    <h3 class=" ">A CLI app that downloads entire manga volumes</h3>
+                    <h3 class=" ">Backend service for managing and serving manga content from different websites.</h3>
                 </div>
                 <div>
                     <span class=" ">Kotlin</span>
