--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
 
         <div class="">
             <div class="">
-                <a target="_blank" href="https://github.com/hhgsx" ><img class="" src="static/icons8-github.svg"></a>
+                <a target="_blank" href="https://github.com/yamlof" ><img class="" src="static/icons8-github.svg"></a>
                 <a target="_blank" href="https://www.linkedin.com/in/edwin-igbinoba-james/" ><img class="" src="static/icons8-linkedin.svg"></a>
                 <a target="_blank" href="https://x.com/yamlof" ><img class="" src="static/icons8-twitter.svg"></a>
             </div>
