--- a/templates/projects.html
+++ b/templates/projects.html
@@ -10,7 +10,7 @@
             <div class=" ">
                 <div class=" ">
                     <h1>Yomu</h1>
-                    <a class=" " target="_blank" href="https://github.com/hhgsx/manga-android" ><img class=" " src="static/icons8-github.svg"></a>
+                    <a class=" " target="_blank" href="https://github.com/yamlof/Yomu" ><img class=" " src="static/icons8-github.svg"></a>
                 </div>
                 <div class=" ">
                     <h3 class=" ">Kotlin Multiplatform app to read manga</h3>
