projects page done

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,10 @@
             --text-color: #000000;
         }
 
+        * {
+            transition: background-color 0.3s ease, color 0.3s ease, filter 0.3s ease;
+        }
+
         body.dark {
             --bg-color: #121212;
             --text-color: #ffffff;
@@ -31,7 +35,7 @@
         body {
             background-color: var(--bg-color);
             color: var(--text-color);
-            transition: background-color 0.3s ease, color 0.3s ease;
+            /* transition: background-color 0.3s ease, color 0.3s ease;*/
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -53,14 +57,14 @@
         nav {
             position: absolute;
             background-color: var(--bg-color); 
-            transition: background-color 0.3s ease, color 0.3s ease;
+            /* transition: background-color 0.3s ease, color 0.3s ease;*/
             top: 0;
             width: 100%;
             display: flex;
             justify-content: space-between;
             background: var(--bg-color);
             padding: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            /*box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);*/
             position: fixed;
             justify-content: space-between;
             align-items: center;
