--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,55 +4,55 @@
 
 {% block body %}
 
-<div class="">
+<div class="space-grotesk-website">
     <div class="">
-        <div class=" ">
-            <div class=" ">
-                <div class=" ">
+        <div  class=" ">
+            <div class="project-container ">
+                <div class="project-image">
+
+                </div>
+                <div class="">
                     <h1>Yomu</h1>
                     <a class=" " target="_blank" href="https://github.com/yamlof/Yomu" ><img class=" " src="static/icons8-github.svg"></a>
                 </div>
-                <div class=" ">
+                <div class="project-description">
                     <h3 class=" ">Kotlin Multiplatform app to read manga</h3>
 
                 </div>
-                <div>
+                <div class="project-languages">
                     <span class=" ">Kotlin</span>
                     <span class=" ">Android</span>
-                    <span></span>
+                    
                 </div>
             </div>
-            <div class=" ">
-                <div class=" ">
+            <div class="project-container">
+                <div class="">
                     <h1>8-bit Emulator (In Progress) </h1>
                     <a class=" " target="_blank" href="https://github.com/hhgsx/8bit-emulator" ><img class="  " src="static/icons8-github.svg"></a>
                 </div>
                 <div>
-                    <h3 class=" ">An 8-bit emulator , started with this one because i intend to go onto more difficult systems</h3>
+                    <h3 class="project-description">An 8-bit emulator</h3>
                 </div>
 
-                <div>
+                <div class="project-languages">
                     <span class=" ">C</span>
-                    <span class=" ">Emulation</span>
-                    <span class=" ">Low Level Programming</span>
                 </div>
             </div>
-            <div class=" ">
+            <div class="project-container">
                 <div class=" ">
                     <h1>manga-sp</h1>
                     <a class= " " target="_blank" href="https://github.com/hhgsx/manga-sp" ><img class=" " src="static/icons8-github.svg"></a>
                 </div>
                 <div>
-                    <h3 class=" ">Backend service for managing and serving manga content from different websites.</h3>
+                    <h3 class="project-description">Backend service for managing and serving manga content from different websites.</h3>
                 </div>
-                <div>
+                <div class="project-languages">
                     <span class=" ">Kotlin</span>
                     <span class=" ">Android</span>
                 </div>
             </div>
         </div>
     </div>
-
 
 </div>
 {% endblock %}
