--- a/templates/projects.html
+++ b/templates/projects.html
@@ -27,7 +27,7 @@
             </div>
             <div class="project-container">
                 <div class="">
-                    <h1>8-bit Emulator (In Progress) </h1>
+                    <h1>8-Chip Emulator (In Progress) </h1>
                     <a class=" " target="_blank" href="https://github.com/hhgsx/8bit-emulator" ><img class="  " src="static/icons8-github.svg"></a>
                 </div>
                 <div>
